[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/UI/GameOver.gd" type="Script" id=1]
[ext_resource path="res://src/UI/BasicButton1.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/UI/themes/title_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/UI/MenuBg.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UI/themes/main_theme.tres" type="Theme" id=5]
[ext_resource path="res://src/UI/BackButton.tscn" type="PackedScene" id=6]

[node name="GameOver" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -100.0
theme = ExtResource( 5 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 924.0
margin_bottom = 450.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 266.0
margin_top = 84.0
margin_right = 658.0
margin_bottom = 365.0
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="WinAnnouncement" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 392.0
margin_bottom = 197.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 3 )
text = "Game Over!
%s"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 217.0
margin_right = 392.0
margin_bottom = 281.0
custom_constants/separation = 10
alignment = 1

[node name="PlayAgain" parent="CenterContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_left = 121.0
margin_right = 271.0
margin_bottom = 27.0
rect_min_size = Vector2( 150, 27 )
size_flags_horizontal = 4
text = "Play Again"

[node name="BackButton" parent="CenterContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_left = 121.0
margin_top = 37.0
margin_right = 271.0
margin_bottom = 64.0
text = "Main Menu"

[node name="MenuBg" parent="." instance=ExtResource( 4 )]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/PlayAgain" to="." method="_on_PlayAgain_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
